--- a/config/sync/lightning_core.settings.yml
+++ b/config/sync/lightning_core.settings.yml
@@ -1,6 +1,6 @@
 content_roles:
   creator:
-    enabled: true
+    enabled: false
     label: '? Creator'
     permissions:
       - 'create ? content'
@@ -16,7 +16,7 @@ content_roles:
       - 'administer panelizer node ? layout'
       - 'access image_browser entity browser pages'
   reviewer:
-    enabled: true
+    enabled: false
     label: '? Reviewer'
     permissions:
       - 'edit any ? content'
