--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -5,12 +5,12 @@ dependencies: {  }
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
 id: authenticated
-label: 'Godkendt bruger'
+label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
   - 'access content'
   - 'access shortcuts'
-  - 'view media'
   - 'access site-wide contact form'
   - 'use text format mailchimp_campaign'
+  - 'view media'
