--- a/config/sync/core.entity_view_display.node.vih_course_period.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_course_period.default.yml
@@ -45,8 +45,8 @@ content:
     weight: 104
     label: above
     settings:
-      format_type: medium
       timezone_override: ''
+      format_type: default_medium_date_without_time
     third_party_settings: {  }
     type: datetime_default
     region: content
@@ -54,15 +54,15 @@ content:
     weight: 102
     label: above
     settings:
-      format_type: medium
       timezone_override: ''
+      format_type: default_medium_date_without_time
     third_party_settings: {  }
     type: datetime_default
     region: content
   links:
     weight: 100
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
   langcode: true
