--- a/config/sync/core.entity_form_display.paragraph.class.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.class.default.yml
@@ -3,14 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser
     - field.field.paragraph.class.field_background_color
     - field.field.paragraph.class.field_background_image
     - field.field.paragraph.class.field_heading
     - field.field.paragraph.class.field_paragraph_class_package
-    - image.style.thumbnail
     - paragraphs.paragraphs_type.class
   module:
-    - image
+    - entity_browser
     - workbench_moderation
 id: paragraph.class.default
 targetEntityType: paragraph
@@ -26,10 +26,15 @@ content:
   field_background_image:
     weight: 3
     settings:
-      progress_indicator: throbber
+      entity_browser: image_browser
+      field_widget_remove: true
+      selection_mode: selection_append
       preview_image_style: thumbnail
+      field_widget_edit: true
+      open: false
+      view_mode: default
     third_party_settings: {  }
-    type: image_image
+    type: entity_browser_file
     region: content
   field_heading:
     weight: 0
