--- a/config/sync/field.storage.node.field_vih_course_subheading.yml
+++ b/config/sync/field.storage.node.field_vih_course_subheading.yml
@@ -1,17 +1,16 @@
-uuid: 71e67440-93b2-433f-8821-530474bca230
+uuid: ce88e669-d60f-4f27-882f-04fd3a08ad5e
 langcode: da
 status: true
 dependencies:
   module:
     - node
-    - text
-id: node.field_course_heading
-field_name: field_course_heading
+id: node.field_vih_course_subheading
+field_name: field_vih_course_subheading
 entity_type: node
-type: text
+type: string_long
 settings:
-  max_length: 255
-module: text
+  case_sensitive: false
+module: core
 locked: false
 cardinality: 1
 translatable: true
