--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -4,9 +4,9 @@ status: true
 dependencies:
   config:
     - field.field.node.vih_long_cource.body
-    - field.field.node.vih_long_cource.field_course_subheading
     - field.field.node.vih_long_cource.field_paragraphs
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
+    - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
     - field.field.node.vih_long_cource.field_vih_course_periods
     - field.field.node.vih_long_cource.field_vih_course_price
@@ -228,19 +228,12 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 5
+    weight: 3
     settings: {  }
     third_party_settings: {  }
-    region: content
-  field_course_subheading:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
     region: content
   field_paragraphs:
-    weight: 11
+    weight: 9
     label: hidden
     settings:
       view_mode: default
@@ -249,7 +242,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_vih_cource_contact_person:
-    weight: 9
+    weight: 7
     label: hidden
     settings:
       view_mode: compact
@@ -257,9 +250,16 @@ content:
     third_party_settings: {  }
     type: entity_reference_entity_view
     region: content
+  field_vih_course_heading:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: basic_string
+    region: content
   field_vih_course_image:
     type: image
-    weight: 10
+    weight: 8
     label: above
     settings:
       image_style: ''
@@ -267,7 +267,7 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_course_price:
-    weight: 6
+    weight: 4
     label: hidden
     settings:
       thousand_separator: ''
@@ -278,14 +278,14 @@ content:
     type: number_decimal
     region: content
   field_vih_course_subheading:
-    weight: 4
+    weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
     type: basic_string
     region: content
   field_vih_course_subsc_price:
-    weight: 7
+    weight: 5
     label: hidden
     settings:
       thousand_separator: ''
@@ -296,7 +296,7 @@ content:
     type: number_decimal
     region: content
   field_vih_course_week_price:
-    weight: 8
+    weight: 6
     label: hidden
     settings:
       thousand_separator: ''
