VI-120 adding picture to user paragraph

--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -12,8 +12,15 @@ dependencies:
   module:
     - entity_reference_revisions
     - image
+    - panelizer
     - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -38,7 +45,7 @@ content:
   field_news_paragraph:
     type: entity_reference_revisions_entity_view
     weight: 105
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -64,5 +71,7 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
