--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.user_quote.field_heading
+    - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
-    - field.field.paragraph.user_quote.field_paragraph_user
+    - image.style.thumbnail
     - paragraphs.paragraphs_type.user_quote
   module:
+    - image
     - text
     - workbench_moderation
 id: paragraph.user_quote.default
@@ -23,6 +25,18 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_paragraph_person_photo:
+    type: entity_browser_file
+    weight: 6
+    settings:
+      entity_browser: image_browser
+      field_widget_edit: true
+      field_widget_remove: true
+      view_mode: default
+      preview_image_style: thumbnail
+      open: true
+      selection_mode: selection_append
+    third_party_settings: {  }
   field_paragraph_text:
     weight: 2
     settings:
@@ -30,15 +44,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
-    region: content
-  field_paragraph_user:
-    weight: 1
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
     region: content
 hidden:
   created: true
