--- a/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.user_quote.default.yml
@@ -4,10 +4,12 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.user_quote.field_heading
+    - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
-    - field.field.paragraph.user_quote.field_paragraph_user
+    - image.style.vih_person_teaser
     - paragraphs.paragraphs_type.user_quote
   module:
+    - image
     - text
 id: paragraph.user_quote.default
 targetEntityType: paragraph
@@ -22,20 +24,20 @@ content:
     third_party_settings: {  }
     type: string
     region: content
+  field_paragraph_person_photo:
+    weight: 1
+    label: hidden
+    settings:
+      image_style: vih_person_teaser
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_paragraph_text:
     weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
-    region: content
-  field_paragraph_user:
-    weight: 1
-    label: hidden
-    settings:
-      view_mode: compact
-      link: false
-    third_party_settings: {  }
-    type: entity_reference_entity_view
     region: content
 hidden: {  }
