--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.event.body
     - field.field.node.event.field_event_end_date
     - field.field.node.event.field_event_paragraph
+    - field.field.node.event.field_event_price
     - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_page_main_image
@@ -53,6 +54,17 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
+  field_event_price:
+    weight: 9
+    label: hidden
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: false
+    third_party_settings: {  }
+    type: number_decimal
     region: content
   field_event_start_date:
     weight: 7
