--- a/config/sync/paragraphs.paragraphs_type.class_packages.yml
+++ b/config/sync/paragraphs.paragraphs_type.class_packages.yml
@@ -3,5 +3,7 @@ langcode: da
 status: true
 dependencies: {  }
 id: class_packages
-label: 'Class Packages'
+label: 'All Class Packages'
+icon_uuid: null
+description: ''
 behavior_plugins: {  }
