--- a/config/sync/paragraphs.paragraphs_type.class.yml
+++ b/config/sync/paragraphs.paragraphs_type.class.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: class
-label: Class
+label: '[OBSOLETE] Class'
 icon_uuid: null
 description: ''
 behavior_plugins: {  }
