--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
@@ -29,7 +29,7 @@ content:
   field_class_package_paragraph:
     type: entity_reference_revisions_entity_view
     weight: -4
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
