VI-105, VI-122 teasers for long and short courses

--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
@@ -28,7 +28,7 @@ content:
     region: content
   field_class_package_paragraph:
     weight: 5
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
