--- a/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.teaser.yml
@@ -5,28 +5,58 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.vih_long_cource.body
+    - field.field.node.vih_long_cource.field_paragraphs
+    - field.field.node.vih_long_cource.field_vih_cource_contact_person
+    - field.field.node.vih_long_cource.field_vih_course_heading
+    - field.field.node.vih_long_cource.field_vih_course_image
+    - field.field.node.vih_long_cource.field_vih_course_periods
+    - field.field.node.vih_long_cource.field_vih_course_price
+    - field.field.node.vih_long_cource.field_vih_course_subheading
+    - field.field.node.vih_long_cource.field_vih_course_subsc_price
+    - field.field.node.vih_long_cource.field_vih_course_week_price
+    - image.style.vih_general_teaser_image
     - node.type.vih_long_cource
   module:
+    - image
+    - panelizer
     - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.vih_long_cource.teaser
 targetEntityType: node
 bundle: vih_long_cource
 mode: teaser
 content:
   body:
+    type: text_trimmed
+    weight: 1
+    region: content
     label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
     settings:
-      trim_length: 600
+      trim_length: 150
     third_party_settings: {  }
-  links:
-    weight: 100
+  field_vih_course_image:
+    type: image
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      image_style: vih_general_teaser_image
+      image_link: ''
+    third_party_settings: {  }
 hidden:
+  field_paragraphs: true
   field_vih_cource_contact_person: true
+  field_vih_course_heading: true
   field_vih_course_periods: true
   field_vih_course_price: true
+  field_vih_course_subheading: true
   field_vih_course_subsc_price: true
   field_vih_course_week_price: true
   langcode: true
+  links: true
