--- a/config/sync/core.entity_view_display.node.vih_short_course.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.teaser.yml
@@ -5,26 +5,73 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.vih_short_course.body
+    - field.field.node.vih_short_course.field_paragraphs
+    - field.field.node.vih_short_course.field_vih_cs_contact_person
+    - field.field.node.vih_short_course.field_vih_sc_end_date
+    - field.field.node.vih_short_course.field_vih_sc_image
+    - field.field.node.vih_short_course.field_vih_sc_option_groups
+    - field.field.node.vih_short_course.field_vih_sc_price
+    - field.field.node.vih_short_course.field_vih_sc_start_date
+    - field.field.node.vih_short_course.scheduled_update
+    - image.style.vih_general_teaser_image
     - node.type.vih_short_course
   module:
+    - datetime
+    - image
+    - panelizer
     - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.vih_short_course.teaser
 targetEntityType: node
 bundle: vih_short_course
 mode: teaser
 content:
   body:
+    type: text_trimmed
+    weight: 1
+    region: content
     label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
     settings:
-      trim_length: 600
+      trim_length: 150
     third_party_settings: {  }
-  links:
-    weight: 100
+  field_vih_sc_end_date:
+    type: datetime_default
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: default_medium_date_without_time
+    third_party_settings: {  }
+  field_vih_sc_image:
+    type: image
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      image_style: vih_general_teaser_image
+      image_link: ''
+    third_party_settings: {  }
+  field_vih_sc_start_date:
+    type: datetime_default
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      timezone_override: ''
+      format_type: default_medium_date_without_time
+    third_party_settings: {  }
 hidden:
+  field_paragraphs: true
   field_vih_cs_contact_person: true
   field_vih_sc_option_groups: true
   field_vih_sc_price: true
   langcode: true
+  links: true
+  scheduled_update: true
